# TORSO_21_dataset

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: metadata.csv  test_images.txt  train_images.txt
data/reality/test/: annotations.yaml
scripts/: add_metadata.py  annotation_filter.py  annotation_statistics.py  base_footprint_annotator.py  base_footprint_viz.py  convert_pascal_voc.py  download.py  download_and_merge_data.py  download_dataset.py  fix_segmentations.py  heatmap.py  imagetagger_prepare_script.py  line_label_tool.py  metadata_statistics.py  pickle_annotations.py  sam3segmentation.py  sanity_check.py  seg_merge.py  split_train_test.py  viz_annotations.py  yolo_eval.py
scripts/vae/: dataset.py  distances.py  duplicates.py  embeddings.py  model.py  plot_errors.py  reconstruct.py  train.py
