[tool.poetry]
name = "Vision Dataset 2021"
version = "0.1.0"
description = ""
authors = ["Florian <florian@flova.de>"]

[tool.poetry.dependencies]
python = ">=3.6.2"
torch = "^1.8.1"
torchvision = "^0.9.1"
matplotlib = "^3.3.4"
numpy = "1.19.5"
Pillow = "^8.1.2"
tensorboardX = "^2.1"
tqdm = "^4.59.0"
scipy = "1.5.4"
sklearn = "^0.0"
requests = "^2.25.1"
opencv-python = "^4.5.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
