[tool.poetry]
name = "TORSO-21 Dataset"
version = "0.1.1"
description = "This is a dataset for the RoboCup Humanoid Soccer domain consisting of images of the Humanoid League as well as the Standard Platform League. We provide two image collections. The first one consists of images from various real-world locations, recorded by different robots. It includes annotations for the ball, goalposts, robots, lines, field edge, and three types of line intersections. The second collection is generated in the Webots simulator which is used for the official RoboCup Virtual Humanoid Soccer Competition. Additionally to the labels of the first collection, labels for the complete goal, depth images, 6D poses for all labels, as well as the camera location in the field of play, are provided."
authors = ["Hamburg Bit-Bots <info@bit-bots.de>", "Florian <florian@flova.de>"]

[tool.poetry.dependencies]
python = ">=3.6.2"
numpy = "1.19.5"
tqdm = "^4.59.0"
requests = "^2.25.1"
opencv-python = "^4.5.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.3.4"
Pillow = "^8.1.2"
scipy = "1.5.4"
seaborn = "^0.11.1"
sklearn = "^0.0"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchsummary = "^1.5.1"
tensorboardX = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
