[tool.poetry]
name = "TORSO-21 Dataset"
version = "0.1.1"
description = "This is a dataset for the RoboCup Humanoid Soccer domain consisting of images of the Humanoid League as well as the Standard Platform League. We provide two image collections. The first one consists of images from various real-world locations, recorded by different robots. It includes annotations for the ball, goalposts, robots, lines, field edge, and three types of line intersections. The second collection is generated in the Webots simulator which is used for the official RoboCup Virtual Humanoid Soccer Competition. Additionally to the labels of the first collection, labels for the complete goal, depth images, 6D poses for all labels, as well as the camera location in the field of play, are provided."
authors = ["Hamburg Bit-Bots <info@bit-bots.de>", "Florian <florian@flova.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.21.1"
opencv-python = "^4.5.2"
PyYAML = "^6.0"
requests = "^2.25.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.3.3"
Pillow = "^9.1.0"
scikit-learn = "^1.3.2"
seaborn = "^0.11.1"
tensorboardX = "^2.1"
torch = ">=1.10.1, <1.13.0"
torchsummary = "^1.5.1"
torchvision = ">=0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
